[package]
name = "pong"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = { git = "https://github.com/amethyst/amethyst.git" }

[features]
default = ["vulkan"]
no-safety = ["amethyst/no-slow-safety-checks"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
